[package]
name = "destiny"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
log = "0.4.22"
serde = { version = "1.0.216", features = ["derive"] }
serenity = { version = "0.12.4", features = ["full"] }
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
